ffmpegfs NEWS

Important changes in 1.5 (2018-05-XX) UNRELEASED

* Feature: 
* Bugfix: 
* Fix deprecation: 

Important changes in 1.4 (2018-05-30)

* The timeout for suspend and abort have been changed. Decoding will now be suspended
  after 15 seconds (formerly 2 minutes). If no activity is detected after further 15 seconds
  (formerly 3 minutes) decoding will be aborted. This will only happen if the file is actively
  closed, so if playback is simply paused decoding will continue. The new limits proofed to
  be fine and reduce system load significantly.

* Feature: Enhanced logging, added a colour profile to screen logs and raised or lowered
           some messages log levels appropriately. Also added a few informative log 
           messages.
* Feature: Bluray support: Detect bluray files in directories and list separate chapters 
           and titles as separate files. 
* Feature: DVD support: Detect IFO files and list separate DVD chapters or programs
           as separate files. 
* Feature: S/VCD support: Detect Video CDs in directories and list chapters 
           as separate files. 
* Feature: Changed the fuse operations code module to c++ (minimise danger of 
           memory leaks or buffer overruns)	   
* Feature: Added --enablescript option that will add virtual index.php to every
           directory. It reads scripts/videotag.php from the ffmpegs binary directory.
           This can be very handy to test video playback. Of course, feel free to
           replace videotag.php with your own script.
* Feature: By default ignore decoding errors so that transcoding does not stop just
           because a few frames are garbled. Can be disabled with the "decoding_errors"
           option.

* Bugfix: Sometimes the pixel format could not be detected, raising an assert/application
          crash with newer FFmpeg API versions. Fixed by setting it to the output format.