@@ -1,8 +1,11 @@
 ffmpegfs NEWS
 
-Important changes in 1.5 (2018-05-XX) UNRELEASED
+Important changes in 1.5 (2018-06-XX) UNRELEASED
 
-* Feature: 
+* Feature: Check if sample rate or sample format is supported by audio codec and change if
+           necessary. Avoid transcode fails e.g. if 44.1KHz sampling rate is requested but
+           not supported (e.g. OPUS only supports 8K, 16K, 24K or 48K). Select nearest
+           supported sample rate or sample format.
 * Bugfix: 
 * Fix deprecation: 
 
